--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ plugins {
 
 group = 'com.github.joutvhu.jenkins'
 version = '1.0.0'
+description = 'Trigger the Multi-Branch Pipeline Job after it is created'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -83,14 +84,14 @@ jar {
         attributes 'Bundle-SymbolicName': project.name
         attributes 'Bundle-Version': project.version
     }
-    into("META-INF/maven/${project.group}/${project.name}") {
-        from {
-            generatePomFileForMavenPublication
-        }
-        rename {
-            it.replace('pom-default.xml', 'pom.xml')
-        }
-    }
+//    into("META-INF/maven/${project.group}/${project.name}") {
+//        from {
+//            generatePomFileForMavenPublication
+//        }
+//        rename {
+//            it.replace('pom-default.xml', 'pom.xml')
+//        }
+//    }
 }
 
 task fatJar(type: Jar) {
@@ -123,12 +124,12 @@ jenkinsPlugin {
     jenkinsVersion = '2.300'
     shortName = project.name
     displayName = 'Multibranch Pipeline Initial Trigger'
-    gitHubUrl = 'https://github.com/joutvhu/multibranch-pipeline-triggers'
+    gitHubUrl = 'https://github.com/joutvhu/multibranch-pipeline-initial-trigger'
     scmTag = "v$version"
     pluginFirstClassLoader = true
     compatibleSinceVersion = version
     workDir = file('/tmp/jenkins')
-    repoUrl = 'https://github.com/joutvhu/multibranch-pipeline-triggers'
+    repoUrl = 'https://github.com/joutvhu/multibranch-pipeline-initial-trigger'
     configureRepositories = false
     configurePublishing = false
     fileExtension = 'hpi'
@@ -144,121 +145,121 @@ jenkinsPlugin {
     licenses {
         license {
             name = 'MIT License'
-            url = 'https://github.com/joutvhu/multibranch-pipeline-triggers/blob/main/LICENSE'
+            url = 'https://github.com/joutvhu/multibranch-pipeline-initial-trigger/blob/main/LICENSE'
         }
     }
 
     enableSpotBugs()
-    enableCheckstyle()
+//    enableCheckstyle()
     enableJacoco()
 }
 
-publishing {
-    publications {
-        maven(MavenPublication) {
-            groupId = group
-            artifactId = project.name
-            artifacts = [fatJar, sourcesJar, javadocJar]
-            version = version
-
-            pom {
-                name = project.name
-                description = 'Multibranch Pipeline Initial Trigger'
-                url = 'https://github.com/joutvhu/multibranch-pipeline-triggers'
-                licenses {
-                    license {
-                        name = 'MIT License'
-                        url = 'https://github.com/joutvhu/multibranch-pipeline-triggers/blob/main/LICENSE'
-                    }
-                }
-                developers {
-                    developer {
-                        id = 'joutvhu'
-                        name = 'Giáo Hồ'
-                        email = 'joutvhu@gmail.com'
-                    }
-                }
-                scm {
-                    connection = 'scm:git:git@github.com:joutvhu/multibranch-pipeline-triggers.git'
-                    developerConnection = 'scm:git:git@github.com:joutvhu/multibranch-pipeline-triggers.git'
-                    url = 'https://github.com/joutvhu/multibranch-pipeline-triggers'
-                }
-                issueManagement {
-                    system = 'Github Issue'
-                    url = 'https://github.com/joutvhu/multibranch-pipeline-triggers/issues'
-                }
-                organization {
-                    name = 'Giáo Hồ'
-                    url = 'https://github.com/joutvhu'
-                }
-                properties = project.ext.versions instanceof Map ? project.ext.versions : new HashMap<>()
-                withXml {
-                    def pomNode = asNode();
-                    def dependencyManagement = pomNode.get('dependencyManagement')
-                    if (dependencyManagement.dependencies.dependency.isEmpty()) {
-                        pomNode.remove(dependencyManagement)
-                    } else {
-                        dependencyManagement.dependencies.dependency.each {
-                            def key = "${it.groupId.text()}:${it.artifactId.text()}"
-                            def versionProperty = project.ext.managedVersions[key]
-                            if (versionProperty == null) {
-                                versionProperty = project.ext.otherVersions[key]
-                            }
-                            if (versionProperty) {
-                                it.version[0].setValue("\${$versionProperty}")
-                            }
-                        }
-                    }
-
-                    def dependenciesNode = pomNode.appendNode('dependencies')
-                    if (configurations.implementation.allDependencies.isEmpty()) {
-                        pomNode.remove(dependenciesNode)
-                    } else {
-                        configurations.implementation.allDependencies.each {
-                            def dependencyNode = dependenciesNode.appendNode('dependency')
-                            dependencyNode.appendNode('groupId', it.group)
-                            dependencyNode.appendNode('artifactId', it.name)
-                            if (it.version != null) {
-                                dependencyNode.appendNode('version', it.version)
-                            }
-                            def key = "${it.group}:${it.name}"
-                            if (project.ext.optionalDependencies.any { el -> el.contains(key) }) {
-                                dependencyNode.appendNode('optional', true)
-                            }
-                        }
-                    }
-                }
-            }
-        }
-    }
-    repositories {
-        maven {
-            name = 'sonatype'
-            if (snapshotVersion) {
-                url = 'https://oss.sonatype.org/content/repositories/snapshots'
-            } else {
-                url = 'https://oss.sonatype.org/service/local/staging/deploy/maven2'
-            }
-            credentials {
-                username = project.ossrhUsername
-                password = project.ossrhPassword
-            }
-        }
-        maven {
-            name = 'github'
-            url = "https://maven.pkg.github.com/joutvhu/multibranch-pipeline-triggers"
-            credentials {
-                username = project.githubUsername
-                password = project.githubPassword
-            }
-        }
-    }
-}
-
-signing {
-    sign publishing.publications.maven
-}
-
-tasks.publishMavenPublicationToGithubRepository.configure {
-    onlyIf { !snapshotVersion }
-}
+//publishing {
+//    publications {
+//        maven(MavenPublication) {
+//            groupId = group
+//            artifactId = project.name
+//            artifacts = [fatJar, sourcesJar, javadocJar]
+//            version = version
+//
+//            pom {
+//                name = project.name
+//                description = description
+//                url = 'https://github.com/joutvhu/multibranch-pipeline-initial-trigger'
+//                licenses {
+//                    license {
+//                        name = 'MIT License'
+//                        url = 'https://github.com/joutvhu/multibranch-pipeline-initial-trigger/blob/main/LICENSE'
+//                    }
+//                }
+//                developers {
+//                    developer {
+//                        id = 'joutvhu'
+//                        name = 'Giáo Hồ'
+//                        email = 'joutvhu@gmail.com'
+//                    }
+//                }
+//                scm {
+//                    connection = 'scm:git:git@github.com:joutvhu/multibranch-pipeline-initial-trigger.git'
+//                    developerConnection = 'scm:git:git@github.com:joutvhu/multibranch-pipeline-initial-trigger.git'
+//                    url = 'https://github.com/joutvhu/multibranch-pipeline-initial-trigger'
+//                }
+//                issueManagement {
+//                    system = 'Github Issue'
+//                    url = 'https://github.com/joutvhu/multibranch-pipeline-initial-trigger/issues'
+//                }
+//                organization {
+//                    name = 'Giáo Hồ'
+//                    url = 'https://github.com/joutvhu'
+//                }
+//                properties = project.ext.versions instanceof Map ? project.ext.versions : new HashMap<>()
+//                withXml {
+//                    def pomNode = asNode();
+//                    def dependencyManagement = pomNode.get('dependencyManagement')
+//                    if (dependencyManagement.dependencies.dependency.isEmpty()) {
+//                        pomNode.remove(dependencyManagement)
+//                    } else {
+//                        dependencyManagement.dependencies.dependency.each {
+//                            def key = "${it.groupId.text()}:${it.artifactId.text()}"
+//                            def versionProperty = project.ext.managedVersions[key]
+//                            if (versionProperty == null) {
+//                                versionProperty = project.ext.otherVersions[key]
+//                            }
+//                            if (versionProperty) {
+//                                it.version[0].setValue("\${$versionProperty}")
+//                            }
+//                        }
+//                    }
+//
+//                    def dependenciesNode = pomNode.appendNode('dependencies')
+//                    if (configurations.implementation.allDependencies.isEmpty()) {
+//                        pomNode.remove(dependenciesNode)
+//                    } else {
+//                        configurations.implementation.allDependencies.each {
+//                            def dependencyNode = dependenciesNode.appendNode('dependency')
+//                            dependencyNode.appendNode('groupId', it.group)
+//                            dependencyNode.appendNode('artifactId', it.name)
+//                            if (it.version != null) {
+//                                dependencyNode.appendNode('version', it.version)
+//                            }
+//                            def key = "${it.group}:${it.name}"
+//                            if (project.ext.optionalDependencies.any { el -> el.contains(key) }) {
+//                                dependencyNode.appendNode('optional', true)
+//                            }
+//                        }
+//                    }
+//                }
+//            }
+//        }
+//    }
+//    repositories {
+//        maven {
+//            name = 'sonatype'
+//            if (snapshotVersion) {
+//                url = 'https://oss.sonatype.org/content/repositories/snapshots'
+//            } else {
+//                url = 'https://oss.sonatype.org/service/local/staging/deploy/maven2'
+//            }
+//            credentials {
+//                username = project.ossrhUsername
+//                password = project.ossrhPassword
+//            }
+//        }
+//        maven {
+//            name = 'github'
+//            url = "https://maven.pkg.github.com/joutvhu/multibranch-pipeline-initial-trigger"
+//            credentials {
+//                username = project.githubUsername
+//                password = project.githubPassword
+//            }
+//        }
+//    }
+//}
+//
+//signing {
+//    sign publishing.publications.maven
+//}
+//
+//tasks.publishMavenPublicationToGithubRepository.configure {
+//    onlyIf { !snapshotVersion }
+//}
