--- a/.github/workflows/jenkins-publish.yml
+++ b/.github/workflows/jenkins-publish.yml
@@ -59,3 +59,4 @@ jobs:
           upload_url: ${{ steps.current_release.outputs.upload_url }}
           asset_name: multibranch-pipeline-initial-trigger.hpi
           asset_path: ./build/libs/multibranch-pipeline-initial-trigger.hpi
+          asset_content_type: application/zip
