--- a/.github/workflows/jenkins-publish.yml
+++ b/.github/workflows/jenkins-publish.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       packages: write
     steps:
       - uses: actions/checkout@v3
@@ -40,7 +40,7 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Build with Gradle
-        run: ./gradlew clean build jpi
+        run: ./gradlew clean build
 
       - name: Get current release
         id: current_release
