--- a/.github/workflows/jenkins-publish.yml
+++ b/.github/workflows/jenkins-publish.yml
@@ -48,7 +48,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish the plugin
-        run: ./gradlew publish
+        run: ./gradlew publish -Dorg.gradle.internal.publish.checksums.insecure
 
       - name: Upload hpi file
         uses: actions/upload-release-asset@v1
